<resources>
    <string name="app_name">Appfrima</string>
    <string name="title_main">Captura de Firma</string>
    <string name="title_list">Firmas Guardadas</string>
    <string name="hint_description">Descripción de la firma (ej. Contrato)</string>
    <string name="label_sign">Firme dentro del cuadro:</string>
    <string name="btn_clear">Limpiar Lienzo</string>
    <string name="btn_save">Guardar Firma</string>
    <string name="btn_view_history">Ver Historial</string>
    <string name="delete_title">Eliminar Firma</string>
    <string name="delete_message">¿Estás seguro de que deseas eliminar esta firma?</string>
    <string name="delete_confirm">Eliminar</string>
    <string name="delete_cancel">Cancelar</string>
    <string name="delete_success">Firma eliminada</string>
</resources>